legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr54760-3.c-4.8.2-1.out.txt
pr54760-3.c: In function ‘test00’:
pr54760-3.c:8:8: error: __builtin_thread_pointer is not supported on this target
   int* tcb = (int*)__builtin_thread_pointer ();
        ^
pr54760-3.c:11:32: error: __builtin_set_thread_pointer is not supported on this target
   __builtin_set_thread_pointer (p);
                                ^
pr54760-3.c: In function ‘test01’:
pr54760-3.c:20:19: error: __builtin_thread_pointer is not supported on this target
   unsigned short* tcb = (unsigned short*)__builtin_thread_pointer ();
                   ^
pr54760-3.c: In function ‘test02’:
pr54760-3.c:27:8: error: __builtin_thread_pointer is not supported on this target
   int* tcb = (int*)__builtin_thread_pointer ();
        ^
pr54760-3.c:30:32: error: __builtin_set_thread_pointer is not supported on this target
   __builtin_set_thread_pointer (x);
                                ^
pr54760-3.c: In function ‘test03’:
pr54760-3.c:39:17: error: __builtin_thread_pointer is not supported on this target
   volatile int* tcb = (volatile int*)__builtin_thread_pointer ();
                 ^
pr54760-3.c: In function ‘test04’:
pr54760-3.c:56:19: error: __builtin_thread_pointer is not supported on this target
     volatile int* tcb = (volatile int*)__builtin_thread_pointer ();
                   ^
pr54760-3.c:59:33: error: __builtin_set_thread_pointer is not supported on this target
    __builtin_set_thread_pointer (xx[i]);
                                 ^
